2012-03-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-03
        * Update jobOptions for online monitoring.

2012-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-02
        * Cosmetic change to EmEfficienciesMonTool.

2012-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-01
        * Fix compilation errors.

2012-03-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-00
        * Add new tool JetEfficienciesMonTool from Hardeep.

2012-02-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-21
        * Coverity fix.

2012-02-23  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-20
        * Use new merge method lowerLB for DB status plots.

2012-02-16  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-19
        * Tier0 merging fixes.

2012-02-09	Rohin Narayan <narayan@physi.uni-heidelberg.de>
		* Tag as TrigT1CaloMonitoring-00-10-18
		* Clean up Fine Time histograms from PPrMon Class 

2012-01-27  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-17
        * Fixes for more than eight EM thresholds.

2011-12-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-16
        * Tier0 merging fixes.

2011-11-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-15
        * Fix ROOT runtime warnings from Sumw2.

2011-11-18  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-14
        * Updates to EmEfficiencies from Hardeep.

2011-11-02  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-13
        * Correct jobOptions.

2011-10-27 Rohin Narayan <narayan@physi.uni-heidelberg.de>
		* Tag as TrigT1CaloMonitoring-00-10-12