@@ -1,3 +1,7 @@
+2012-04-04  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-11-04
+        * Eliminate need for L1CaloOfflineTriggerTowerTools.
+
 2012-03-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-11-03
         * Update jobOptions for online monitoring.
